@@ -226,6 +226,7 @@
        <xs:restriction base='xs:string'>
 	 <xs:enumeration value='1'/>
 	 <xs:enumeration value='2'/>
+	 <xs:enumeration value='3'/>
 	 <xs:enumeration value='4'/>
        </xs:restriction>
      </xs:simpleType>
